--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -12,6 +12,10 @@
 
     <p>{{ post.content}}</p>
 
+    <div class="post-image">
+      <img [src]="post.imagePath" [alt]="post.title">
+    </div>
+
     <mat-action-row>
       <button mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</button>
       <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
