--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -23,4 +23,10 @@
   </mat-expansion-panel>
 </mat-accordion>
 
+<mat-paginator [length]="totalPost"
+              [pageSize]="postsPerPage"
+              [pageSizeOptions]="[1, 2, 3, 5, 10]"
+              (page)="onChangedPage($event)">
+</mat-paginator>
+
 <p class="info-text mat-body-2" *ngIf="posts.length <= 0">No posts added yet!</p>
