changes in style

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary">
-  <span><a routerLink="/">My Messages</a></span>
+<mat-toolbar>
+  <span><a routerLink="/">Hai Pham's Instagram</a></span>
   <span class="spacer"></span>
   <ul>
     <li>
