--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -2,7 +2,7 @@
 <mat-accordion multi="true" *ngIf="posts.length > 0">
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
-      <mat-panel-title>
+      <mat-panel-title class="title">
         {{ post.title }}
       </mat-panel-title>
       <mat-panel-description>
