--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,5 +5,8 @@
     <li>
       <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
     </li>
+    <li>
+      <a mat-button routerLink="/signup" routerLinkActive="mat-accent">Sign Up</a>
+    </li>
   </ul>
 </mat-toolbar>
