--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,20 @@
 <mat-card>
-    <form [formGroup]="form" (submit)="onSaveUser()">
-      <mat-form-field>
-        <input matInput type="text" placeholder="User name"
-          formControlName="userName">
-        <mat-error *ngIf="form.get('userName').invalid">Please enter title.</mat-error>
-      </mat-form-field>
-  
-      <mat-form-field>
-        <input type="password" matInput placeholder="Password" row="4" 
-          formControlName="password">
-        <mat-error *ngIf="form.get('password').invalid">Please enter content.</mat-error>
-      </mat-form-field>
+  <form [formGroup]="form" (submit)="onSaveUser()">
+    <mat-form-field>
+      <input matInput type="text" placeholder="User name" formControlName="userName">
+      <mat-error *ngIf="form.get('userName').invalid">Please enter username.</mat-error>
+    </mat-form-field>
 
-      <mat-form-field>
-          <input type="password" matInput placeholder="Confirm Password" row="4" 
-            formControlName="confirmPassword">
-          <mat-error *ngIf="form.get('confirmPassword').invalid">Please enter content.</mat-error>
-        </mat-form-field>
-      <button mat-raised-button color="primary" type="submit">Save post</button>
-    </form>
-  </mat-card>
+    <mat-form-field>
+      <input type="password" matInput placeholder="Password" row="4" formControlName="password">
+      <mat-error *ngIf="form.get('password').invalid">Please enter password.</mat-error>
+    </mat-form-field>
+
+    <mat-form-field id="confirmField">
+      <input type="password" matInput placeholder="Confirm Password" row="4" formControlName="confirmPassword">
+      <mat-error *ngIf="form.get('confirmPassword').invalid">Your password and confirmation do not match.</mat-error>
+    </mat-form-field>
+
+    <button id="submitButton" mat-raised-button color="primary" type="submit">Save post</button>
+  </form>
+</mat-card>
