complete log in

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,4 +7,6 @@ body { margin: 0; font-family: 'Roboto', sans-serif; } */
 
 body {
     background-color: azure;
+    width: 70%;
+    margin: auto;
 }
