--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
           </mat-error>
         </mat-form-field>
 
-        <button id="submitButton" mat-raised-button color="primary" type="submit">Save post</button>
+        <button id="submitButton" mat-raised-button color="primary" type="submit">Sign up</button>
       </form>
     </mat-card>
   </mat-tab>
@@ -35,7 +35,7 @@
           <mat-error *ngIf="loginForm.get('password').invalid">Please enter password.</mat-error>
         </mat-form-field>
 
-        <button id="submitButton" mat-raised-button color="primary" type="submit">Save post</button>
+        <button id="submitButton" mat-raised-button color="primary" type="submit">Log in</button>
       </form>
     </mat-card>
   </mat-tab>
